# fub.msc.robotics

./: .gitignore  README.md
abgabe/: RO-04-arm2r_client.cpp  RO-04-arm2r_server.cpp  RO-04-rrbot.gazebo.xacro  RO-04-rrbot.urdf.xacro  RO-06-arm2r_tf_listener.cpp  RO-08-Bullmann-Lehmann-Astar.h  RO-09-Bullmann-Lehmann-Astar.cpp  RO-09-Bullmann-Lehmann-Node.h  RO-09-Bullmann-Lehmann-Pose.cpp  RO-13-Bullmann-Lehmann-kalman.cpp
latex/: deckblatt.tex  robotics.tex  robotics.toc  roboticstutorien.kilepr
latex/chapter/: ue1.tex  ue12.tex  ue13.tex  ue2.tex  ue3.tex  ue4.tex  ue5.tex  ue6.tex  ue7.tex  ue8.tex
ros/: rrbot.gazebo.xacro  rrbot.urdf.xacro
ros/src/ackermann_vehicle/: README.md
ros/src/ackermann_vehicle/ackermann_vehicle_description/: visual.rviz
ros/src/ackermann_vehicle/ackermann_vehicle_gazebo/: CMakeLists.txt  package.xml
ros/src/beginner_tutorials/: package.xml
ros/src/beginner_tutorials/src/: listener.cpp  talker.cpp
ros/src/u06/: CMakeLists.txt  package.xml  urdf.rviz
ros/src/u06/launch/: display.launch  rqt.launch
ros/src/u06/urdf/: arm2r.urdf.xacro
ros/src/u07/: CMakeLists.txt  package.xml
ros/src/u07/launch/: gazebo.launch  pid.launch
ros/src/u07/src/: controller.cpp  controller.h
ros/src/u08/: CMakeLists.txt  package.xml
ros/src/u08/src/: .Astar.cpp.swp  .Astar.h.swp  .Node.cpp.swp  .Node.h.swp  Astar.cpp  Node.cpp
ros/src/u09/: CMakeLists.txt  package.xml
ros/src/u09/src/: Astar.h  Node.cpp  Pose.h
ros/src/u10/: CMakeLists.txt  package.xml
ros/src/u10/src/: Astar.cpp  Astar.h  (+1 more)
ros/urdf/: .task2.urdf.swp  task2.urdf
(+8 files in other folders)
